src/test/ui/repeat-to-run-dtor-twice.stderr
error: repeated expression does not implement `std::marker::Copy`
  --> $DIR/repeat-to-run-dtor-twice.rs:17:13
   |
LL |     let _ = [ a; 5 ];
   |             ^^^^^^^^ the trait `std::marker::Copy` is not implemented for `Foo`
   |
   = note: the `std::marker::Copy` trait is required because the repeated element will be copied

error: aborting due to previous error

